# azure-mlops-chatbot-hf-tf

./: .amlignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements.txt.amltmp
azure_devops/: azure-pipelines-cd-aks.yml  azure-pipelines-cd.yml  azure-pipelines-ci.yml  azure-pipelines-infra.yml  azure-pipelines-ml.yml  azure-pipelines-retrain.yml
azure_devops/templates/: aml-train-register-deploy.yml  aml-train-register.yml  build-and-push.yml  deploy-aks.yml  python-quality.yml  retrain.yml  smoke-test.yml  terraform-apply.yml  terraform-validate-plan.yml
configs/: azure_workspace.example.yaml  deploy_config.yaml  monitor_config.yaml  project_config.yaml  retrain_config.yaml  train_config.yaml  train_config.yaml.amltmp
data/raw/: chat_logs_sample.csv  faq_data.csv  faq_data1.csv  unknown_data.csv
data/schema/: dataset_schema.json
deployment/aks/: configmap.yml  deployment.yml  hpa.yml  ingress.yml  secret-provider-class.yml  service.yml
deployment/api/: openapi.yaml
deployment/docker/: Dockerfile.inference  Dockerfile.train
docs/: api_contract.md  architecture.md  devops_flow.md  drift_strategy.md  mlops_flow.md  terraform_design.md
environment/: conda.yml
infra/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/environments/: dev.tfvars  prod.tfvars  test.tfvars
infra/modules/acr/: main.tf  outputs.tf
infra/modules/aks/: main.tf  outputs.tf  variables.tf
infra/modules/aml_workspace/: main.tf  outputs.tf  variables.tf
infra/modules/app_insights/: main.tf  outputs.tf  variables.tf
infra/modules/key_vault/: main.tf  outputs.tf  variables.tf
infra/scripts/: terraform_apply.sh  terraform_init.sh  terraform_plan.sh
notebooks/: 01_workspace_setup.ipynb  02_data_prep.ipynb  03_train_eval.ipynb  04_mlflow_experiments.ipynb  05_submit_job.ipynb  06_pipeline.ipynb  07_register_model.ipynb  08_deploy_endpoint.ipynb  09_monitoring.ipynb  10_retraining.ipynb
pipelines/: aml_batch_inference_pipeline.py  aml_monitor_pipeline.py  aml_retrain_pipeline.py  aml_train_pipeline.py  deploy_endpoint.py  register_model_job.py  register_model_job1.py.amltmp  train_job.py
pipelines/components/: drift_component.yml  eval_component.yml  prep_component.yml  register_component.yml  retrain_component.yml  train_component.yml
src/data/: augment.py  ingest.py  preprocess.py  register_data_asset.py  split.py  split.py.amltmp  validate.py
src/evaluation/: confusion_matrix.py  error_analysis.py  evaluate.py  metrics.py
src/features/: label_encoder.py  label_encoder.py.amltmp  tokenizer_utils.py
src/inference/: aml_score.py  postprocess.py  predict-backup.py  predict.py  predict.py.amltmp  request_schema.py  response_mapper.py  score.py
src/monitoring/: alerting.py  collect_logs.py  confidence_monitor.py  data_drift.py  latency_monitor.py  model_drift.py
src/registry/: model_metadata.py  promote_model.py  register_model.py
src/retraining/: champion_challenger.py  prepare_retrain_dataset.py  trigger_retraining.py
src/training/: callbacks.py  mlflow_logger.py  mlflow_logger.py.amltmp  model_builder.py  train.py  train.py.amltmp  trainer.py  trainer.py.amltmp
src/utils/: azure_ml_utils.py  helpers.py  io_utils.py.amltmp  logger.py
tests/integration/: test_aks_endpoint.py  test_aml_pipeline.py  test_model_registry.py  test_retraining_flow.py
tests/unit/: test_drift.py  test_evaluate.py  test_preprocess.py  test_score.py  test_train.py
(+21 files in other folders)
